src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cylinder_Volume__c</fullName>
        <formula>ROUND(3.14159* radius__c* radius__c*  height__c  ,18)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cylinder Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bengaluru</fullName>
                </value>
                <value>
                    <fullName>Chennai</fullName>
                </value>
                <value>
                    <fullName>Delhi</fullName>
                </value>
                <value>
                    <fullName>Kolkata</fullName>
                </value>
                <value>
                    <fullName>Mumbai</fullName>
                </value>
                <value>
                    <fullName>Pune</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>height__c</fullName>
        <label>height</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>radius__c</fullName>
        <label>radius</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Private</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PRIVATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Private</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Close_Date_Alert</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(NOT(IsClosed), IF( CloseDate &lt;=(TODAY()-1),true,false)) , true, false)</errorConditionFormula>
        <errorMessage>Hey McFly, unless you are planning to go back in time, please update your close date</errorMessage>
    </validationRules>
</CustomObject>